# fastq-analyser-gui

./: .editorconfig  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build_for_release.yml
src/: App.jsx  analysis.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analysis.rs  io.rs  main.rs  models.rs
src-tauri/src/analysis/: analysers.rs  commands.rs  mod.rs
src-tauri/src/services/: io.rs
src/components/: FQModal.jsx  FastaResultPanel.jsx  FastqResultPanel.jsx  FileInput.jsx  LoadingIndicator.jsx  TextInput.jsx  ToggleSwitch.jsx
