[package]
name = "fastq_analyser"
version = "0.4.0"
description = "A desktop application that analyses FastQ records."
authors = ["dcl10"]
license = "MIT"
repository = "https://github.com/dcl10/fastq-analyser-gui"
default-run = "fastq_analyser"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
bio = "1.2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["api-all"] }
flate2 = "1.0.26"
uuid = { version = "1.3.4", features = ["v4"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
